--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,9 +8,6 @@ body {
     width: 100vw;
     align-items: center;
     text-align: center;
-    gap: 5vh;
-    margin-top: 5vh;
-    margin-bottom: 5vh;
     font-family: fantasy;
 }
 
@@ -28,6 +25,10 @@ button {
 }
 
 @layer components {
+    .header-element-first {
+        @apply w-screen flex flex-col gap-[2vh] items-center border-b py-[5vh] border-gray-500;
+    }
+
     .li-element-first {
         @apply flex flex-col w-screen shrink-0 px-[10vw] list-none gap-[2vh];
     }
@@ -37,7 +38,7 @@ button {
     }
 
     .section-element-first {
-        @apply flex flex-col gap-[2vh];
+        @apply flex flex-col gap-[2vh] py-[5vh] border-b border-gray-500;
     }
 
     .p-element-first {
@@ -49,7 +50,7 @@ button {
     }
 
     .p-element-third {
-        @apply mt-[2vh] flex h-[3vh] justify-center font-bold;
+        @apply flex w-screen px-[10vw] font-bold text-shadow-xs text-shadow-black;
     }
 
     .article-element-first {
