preparing for deploy

--- a/src/components/Carousel-2.astro
+++ b/src/components/Carousel-2.astro
@@ -11,7 +11,7 @@
     >
     <div
         data-carousel-list
-        class="flex w-screen overflow-x-auto items-center 2xl:px-[34vw] 2xl:flex-col 2xl:gap-[3vh]"
+        class="flex w-screen overflow-x-auto items-center items-start 2xl:px-[20vw] 2xl:justify-center 2xl:gap-[2vw]"
     >
         <slot />
     </div>
