preparing for deploy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import SimpleSlider from "../components/SimpleSlider.astro";
 					</p></a
 				>
 				<a
-					class="ml-4 px-3 py-1 bg-zinc-700 text-white rounded-md hover:bg-pink-700 flex items-center h-[4vh] w-[20vw] text-xs justify-center 2xl:w-[10vw] 2xl:h-[3vh]"
+					class="ml-4 px-3 py-1 bg-zinc-700 text-white rounded-md hover:bg-pink-700 flex items-center h-[4vh] w-[20vw] text-xs justify-center 2xl:w-[10vw] 2xl:h-[3vh] 2xl:p-0"
 					href="/files/resume.pdf"
 					download="Jesus_Mendoza_Resume.pdf"
 					rel="noopener noreferrer"
