Added Nail Salon to portfolio

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,22 +178,22 @@ import SimpleSlider from "../components/SimpleSlider.astro";
 					</p>
 				</article>
 				<article class="article-element-first">
-					<h3 class="h3-element-second">Game Achievement Tracker</h3>
+					<h3 class="h3-element-second">Nail Salon</h3>
 					<SimpleSlider data-autoplay="3000">
 						<img
-							src="/images/Screenshot_20251010_014046.png"
+							src="/images/Screenshot_20251025_224457.png"
 							alt="Achievement Tracker — main dashboard"
 							class="object-cover px-[10vw] h-[18vh] 2xl:p-0 2xl:h-[15vh]"
 							loading="lazy"
 						/>
 						<img
-							src="/images/Screenshot_20251010_014130.png"
+							src="/images/Screenshot_20251025_232644.png"
 							alt="Achievement Tracker — add/edit achievement modal"
 							class="object-cover px-[10vw] h-[18vh] 2xl:p-0 2xl:h-[15vh]"
 							loading="lazy"
 						/>
 						<img
-							src="/images/Screenshot_20251010_014235.png"
+							src="/images/Screenshot_20251025_232248.png"
 							alt="Achievement Tracker — statistics and filters"
 							class="object-cover px-[10vw] h-[18vh] 2xl:p-0 2xl:h-[15vh]"
 							loading="lazy"
@@ -202,13 +202,13 @@ import SimpleSlider from "../components/SimpleSlider.astro";
 					<p class="p-element-third">
 						<a
 							class="w-1/2 bg-sky-500 hover:bg-pink-500 rounded-bl-md flex items-center justify-center h-[4vh] 2xl:h-[3vh]"
-							href="https://famous-croquembouche-3d209d.netlify.app/"
+							href="https://frontend-production-46e3.up.railway.app"
 							target="_blank"
 							rel="noopener noreferrer">Demo</a
 						>
 						<a
 							class="w-1/2 bg-blue-500 hover:bg-pink-500 rounded-br-md flex items-center justify-center h-[4vh] 2xl:h-[3vh]"
-							href="https://github.com/JesusMG24/achievement-tracker-exp"
+							href="https://github.com/JesusMG24/nail-salon"
 							target="_blank"
 							rel="noopener noreferrer">Source</a
 						>
@@ -216,13 +216,12 @@ import SimpleSlider from "../components/SimpleSlider.astro";
 					<p
 						class="p-element-first w-screen px-[10vw] mt-[2vh] 2xl:w-full 2xl:px-0 2xl:text-[.8vw]"
 					>
-						A lightweight app to track in‑game achievements with
-						filters and quick stats.
+						A beautiful landing page with an admin dashboard which allows to edit services and gallery.
 					</p>
 					<p
 						class="p-element-first w-screen px-[10vw] 2xl:w-full 2xl:px-0 2xl:text-[.8vw]"
 					>
-						<strong>Stack</strong>: React · Node · PostgreSQL ·
+						<strong>Stack</strong>: Next.js · TypeScript · PostgreSQL ·
 						Tailwind
 					</p>
 				</article>
