added nextjs in frontend techs & skills section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -317,9 +317,9 @@ import SimpleSlider from "../components/SimpleSlider.astro";
 						<li class="li-element-second">
 							<img
 								class="invert"
-								src="https://images.icon-icons.com/3911/PNG/512/astro_logo_icon_247543.png"
+								src="https://www.svgrepo.com/show/354112/nextjs.svg"
 							/>
-							<h5 class="h5-element-first">Astro</h5>
+							<h5 class="h5-element-first">Next.js</h5>
 						</li>
 					</div>
 				</ul>
